<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/aboutFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/i_yellow"
    android:backgroundTint="@color/i_yellow"
    android:gravity="center"
    tools:context=".AboutFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="64dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/aboutAppName"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:fontFamily="@font/palatino"
            android:gravity="center"
            android:text="@string/about_appname"
            android:textAlignment="center"
            android:textColor="@color/i_black"
            android:textSize="@dimen/global_textsize"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/aboutVersion"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:fontFamily="@font/palatino"
            android:gravity="center"
            android:text="@string/about_version"
            android:textAlignment="center"
            android:textColor="@color/i_black"
            android:textSize="@dimen/global_textsize"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/aboutDevelopedBy"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:fontFamily="@font/palatino"
            android:gravity="center"
            android:text="@string/avout_developedby"
            android:textAlignment="center"
            android:textColor="@color/i_black"
            android:textSize="@dimen/global_textsize"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/aboutCopyright"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:fontFamily="@font/palatino"
            android:gravity="center"
            android:text="@string/about_copyritght"
            android:textAlignment="center"
            android:textColor="@color/i_black"
            android:textSize="@dimen/global_textsize"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/aboutVisit"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:fontFamily="@font/palatino"
            android:gravity="center"
            android:text="@string/about_visit"
            android:textAlignment="center"
            android:textColor="@color/i_black"
            android:textSize="@dimen/global_textsize"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/aboutLink"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:fontFamily="@font/palatino"
            android:gravity="center"
            android:text="@string/about_link"
            android:textAlignment="center"
            android:textColor="@color/colorForLink"
            android:textSize="@dimen/global_textsize" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>