<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45"/>

    <Button
        android:id="@+id/homeLoginBtn"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:text="@string/btn_login"
        app:layout_constraintBaseline_toBottomOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="124dp" />

    <Button
        android:id="@+id/homeCalendarBtn"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:text="@string/btn_calendar"
        app:layout_constraintBaseline_toBottomOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="124dp" />

    <Button
        android:id="@+id/homeCateringBtn"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="80dp"
        android:text="@string/btn_catering"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeLoginBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>